college prj/force-app/main/default/objects/Student__c/fields/AADHAR_Number__c.field-meta.xml
<CustomField>
    <fullName>AADHAR_Number__c</fullName>
    <label>AADHAR Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>