college prj/force-app/main/default/objects/Student__c/fields/Admission_Number__c.field-meta.xml
<CustomField>
    <fullName>Admission_Number__c</fullName>
    <label>Admission Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>