college prj/force-app/main/default/objects/Student__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <summarizedField>Fee__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Fee__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>