college prj/force-app/main/default/objects/Student__c/fields/Days_Absent__c.field-meta.xml
<CustomField>
    <fullName>Days_Absent__c</fullName>
    <label>Days Absent</label>
    <summaryFilterItems>
        <field>Attendence__c.Attendence__c</field>
        <operation>equals</operation>
        <value>Absent</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendence__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>