college prj/force-app/main/default/objects/Student__c/fields/Entrance_Type__c.field-meta.xml
<CustomField>
    <fullName>Entrance_Type__c</fullName>
    <label>Entrance Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>