college prj/force-app/main/default/objects/Student__c/fields/Father_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Name__c</fullName>
    <label>Father&apos;s Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>