college prj/force-app/main/default/objects/Student__c/fields/Father_s_Phn_No__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Phn_No__c</fullName>
    <label>Father&apos;s Phn No</label>
    <type>Phone</type>
</CustomField>