college prj/force-app/main/default/objects/Student__c/fields/joining_Date__c.field-meta.xml
<CustomField>
    <fullName>joining_Date__c</fullName>
    <label>joining Date</label>
    <type>Date</type>
</CustomField>