college prj/force-app/main/default/objects/Student__c/fields/Present_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Present_Percentage__c</fullName>
    <formula>Days_Present__c /( Days_Present__c + Days_Absent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>