college prj/force-app/main/default/objects/Student__c/fields/Seat_Type__c.field-meta.xml
<CustomField>
    <fullName>Seat_Type__c</fullName>
    <label>Seat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>