college prj/force-app/main/default/objects/Student__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <displayFormat>STUD-{0000}</displayFormat>
    <label>Student ID</label>
    <type>AutoNumber</type>
</CustomField>