college prj/force-app/main/default/objects/Student__c/fields/Student_Phn_NO__c.field-meta.xml
<CustomField>
    <fullName>Student_Phn_NO__c</fullName>
    <label>Student Phn NO</label>
    <type>Phone</type>
</CustomField>