college prj/force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Email_ID__c</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>